fix: ScrollBar block

--- a/src/pc-scrollBar/index.scss
+++ b/src/pc-scrollBar/index.scss
@@ -1,6 +1,7 @@
 ::-webkit-scrollbar {
   width: 6px;
   height: 6px;
+  display: block;
 }
 
 ::-webkit-scrollbar-track {
